# z-correction

./: README.md  pyproject.toml
data/: holder.gcode  holder_corrected.gcode  mount.gcode  mount2.gcode  mount2_corrected.gcode  mount_corrected.gcode  test1.csv  test1.gcode  test1_corrected.gcode
notebooks/: 2024-01-05 prueba inicial.ipynb
