[tool.poetry]
name = "z-correction"
version = "0.1.0"
description = ""
authors = ["edoelas <miego.cvcv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
plotly = "^5.18.0"
scikit-learn = "^1.3.2"
nbformat = "^5.9.2"
ipykernel = "^6.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
